--- a/site/static/clojure.css
+++ b/site/static/clojure.css
@@ -7,8 +7,8 @@ img {border: 0;}
 
 #Header {position: relative;clear: both;overflow: auto;height: 110px}
 #Logo {position: absolute;top: 0;left: 0;padding: 10px 0 0 62px;width: 138px;height: 100px}
-#Header h1 {float: left;background:transparent url(clojure-text.gif) no-repeat 8px 36px;border: 0;margin: 0;padding: 0;text-indent:-9999px;position: absolute;top: 0;left: 200px;}
-#Header h1 a:link, #Header h1 a:visited, #Header h1 a:hover {border: 0;display: block;margin: 0;padding: 0;text-decoration: none;width: 220px;height: 110px;}
+#Header h1 {float: left;border: 0;margin: 0;padding: 0;position: absolute;top: 50;left: 200px; height: 60px}
+#Header h1 a:link, #Header h1 a:visited, #Header h1 a:hover {color:#000000; text-decoration: none;}
 #Resources {min-height: 110px;width: 234px;padding: 5px 0;float: right;border-bottom: 1px solid #abc4e2;background: #e4eaf7 url(space/resources-background.gif) repeat-y;overflow: auto;}
 #Resources ul {margin: 0;padding: 0 25px;list-style: none;}
 #ResourcesB {float: right;}
@@ -20,13 +20,12 @@ img {border: 0;}
 
 #leftcolumn ul {list-style: none;margin: 0;padding: 0;}
 
-#leftcolumn .toc-header {font-weight: bold;display: block;background: transparent url(space/left-nav-divider.gif) repeat-x;padding: 6px 0 0 17px;margin: 12px 0 0 0;}
-#leftcolumn a {font-weight: bold;display: block;background: transparent url(space/left-nav-divider.gif) repeat-x;padding: 6px 0 0 17px;margin: 12px 0 0 0;}
+#leftcolumn a, #leftcolumn .toc-header {font-weight: bold;display: block;background: transparent url(space/left-nav-divider.gif) repeat-x;padding: 6px 0 0 17px;margin: 12px 0 0 0;}
 #leftcolumn li a {font-weight: normal;background:none;margin: 0;padding: 0 0 0 17px;}
 #leftcolumn br {display: none;}
 #leftcolumn .menu {margin-top: 14px;background: #fff url(space/left-nav-background.gif) repeat-y;}
 
-#leftcolumn a:link , #leftcolumn a:visited , #leftcolumn a:active, .toc-header {color: #666;}
+#leftcolumn a:link , #leftcolumn a:visited , #leftcolumn a:active {color: #666;}
 #leftcolumn a:hover {text-decoration: underline;color: #222;}
 
 #rightcolumn {margin-left: 220px;}
